--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,3 +10,4 @@ $color_texto:  rgb(66, 66, 66);
 $color_bordes: rgb(70, 36, 70);
 $tipo_de_letra: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 $tamano_h1: 5rem;
+$padding_top_md:1.25rem;
