--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -24,7 +24,6 @@
     background: $color_fondo_general;
 }
 
-
 #home {
     text-align: left;
     background-image: url("../images/backgroundimage.jpg");
@@ -56,6 +55,7 @@
         padding-top: 2.5rem;
         transition: all 0.5s;
     }
+
     .btn {
         margin-top:1.75rem;
         margin-bottom:13.25rem;}
@@ -219,18 +219,18 @@ h1{
 }    
     #home h1 {
         font-size: calc($tamano-h1)*.8;
-        padding-top: 1.25rem; 
+        padding-top: $padding_top_md; 
 }
 
     #home h2 {
-        padding-top: 1.25rem;
+        padding-top: $padding_top_md;
         font-size: calc($tamano-h1)*0.6;
         }
 
     #home h3 {
         text-align: right;
         font-size: calc($tamano-h1)*0.5;
-        padding-top: 1.25rem;
+        padding-top: $padding_top_md;
     }
 
     #home .btn{
@@ -246,8 +246,7 @@ h1{
     .nav-link {
         font-size: calc($tamano-h1 / 3) !important;
     }
-    
-    
+        
 }
 
 @media (max-width: 767px) {
@@ -269,7 +268,6 @@ h1{
     #home h2 {
         margin-left:0;
         padding-left: 0;
-        padding-top: 1.25rem;
         color: $color_h1;
         font-size: calc($tamano-h1 / 2.5);
         }
