--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,16 @@
   background-color: white !important;
 }
 
+.navbar-brand {
+  color: rgb(85, 29, 85) !important;
+  font-size: 2.5rem !important;
+  font-weight: bold;
+  padding-left: 0.5rem;
+}
+.navbar-brand:hover {
+  color: rgb(201, 67, 201) !important;
+}
+
 .logo {
   padding: 5px;
   background-color: rgb(85, 29, 85);
@@ -40,13 +50,13 @@
 }
 #home h1 {
   color: rgb(85, 29, 85);
-  font-size: 5rem;
+  font-size: 2.5rem;
   padding-top: 2.5rem;
   transition: all 0.5s;
 }
 #home h2 {
   color: rgb(90, 90, 90);
-  font-size: 2.5rem;
+  font-size: 1.75rem;
   padding-top: 2.5rem;
   transition: all 0.5s;
 }
@@ -205,11 +215,15 @@ footer.btn {
 }
 @media (max-width: 850px) {
   /* Tablet */
+  .navbar-brand {
+    font-size: 3.5rem !important;
+    padding: 0.3rem;
+  }
   h1 {
     padding: 35px 6px 0px 6px;
   }
   #home h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     padding-top: 1.25rem;
   }
   #home h2 {
@@ -235,6 +249,10 @@ footer.btn {
 }
 @media (max-width: 767px) {
   /* Celular */
+  .navbar-brand {
+    font-size: 2.1rem !important;
+    padding: 0.3rem;
+  }
   h1 {
     padding: 10px 6px 0px 6px;
   }
@@ -245,7 +263,7 @@ footer.btn {
     margin-left: 0;
     padding-left: 0;
     padding-top: 1rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   #home h2 {
     margin-left: 0;
